<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_margin_dialog"
        android:layout_marginEnd="@dimen/content_margin_dialog"
        android:layout_marginStart="@dimen/content_margin_dialog"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/exercise"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_dialog_title" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_margin_dialog"
        android:layout_marginEnd="@dimen/content_margin_dialog"
        android:layout_marginStart="@dimen/content_margin_dialog"
        android:hint="@string/name">

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_margin_dialog"
        android:layout_marginEnd="@dimen/content_margin_dialog"
        android:layout_marginStart="@dimen/content_margin_dialog"
        android:hint="@string/repeats">

        <EditText
            android:id="@+id/repeats_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/content_padding"
            android:drawableStart="@drawable/ic_repeat"
            android:inputType="number"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:id="@+id/action_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/cancel_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/ok_btn"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/ok_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>
</LinearLayout>