<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutDetailInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:padding="@dimen/content_padding"
                tools:text="Sample Workout Name" />

            <ImageButton
                android:id="@+id/edit_name_btn"
                android:layout_width="@dimen/edit_button_dimension"
                android:layout_height="@dimen/edit_button_dimension"
                android:background="@android:color/transparent"
                android:contentDescription="@string/image_content_description"
                android:padding="@dimen/content_padding"
                android:src="@drawable/ic_edit" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/video_container_height"
            android:padding="@dimen/content_padding">

            <FrameLayout
                android:id="@+id/video_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_ondemand_video"
                    android:text="@string/video_not_attached" />

            </FrameLayout>

            <!--<FrameLayout
                android:id="@+id/video_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight">

                <com.google.android.youtube.player.YouTubePlayerView
                    android:id="@+id/player_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </FrameLayout>-->


        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/content_padding"
            android:text="@string/exercises" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/exercises_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/content_padding" />
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>